--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,5 +1,5 @@
 @misc{MTurk,
-  author = {Amazon.com Inc.},
+  author = {{Amazon.com Inc.}},
   title = {Amazon Mechanical Turk},
   year = {2005},
   url = {\url{https://www.mturk.com/mturk/welcome}},
@@ -169,7 +169,7 @@ month={Dec}
 }
 
 @unpublished{Hoffman:2014,
-  author       = {Hofmann, H. and Rottget, C. and Dixon, P. and Cook, D. and Buja, A.}, 
+  author       = {Hofmann, H. and R{\:{o}}ttger, C. and Dixon, P. and Cook, D. and Buja, A.}, 
   title        = {Three scenarios of visual triangle tests},
   note         = {Working Paper},
   month        = {2},
