--- a/paper/TODO.txt
+++ b/paper/TODO.txt
@@ -2,9 +2,9 @@
 
 - fix biblio
 - captions: first sentence what is the basic structure of plot, e.g Scatterplot of proportion detected against correlation. Second sentences explain details color, shape, lines, ... Third sentence what do you expect the reader to learn by looking at the plot e.g. Proprtion dtected is higher when correlation is large.  Always add a "."
-- Investigate the extreme residuals
+*- Investigate the extreme residuals
 - plot random effects
-- subject plots, like proportion correct for each subject and display histogram
+*- subject plots, like proportion correct for each subject and display histogram
 * - lineup plots, proportion correct for each lineup
 - reasons plots
 - fix grid of predicted values
@@ -27,8 +27,8 @@
 *- clean code chunks
 *- remove the NA value for smooth on the last line
 *- why only one pin plot. add the rest
-- notation for the model
-- subsectioning
+*- notation for the model
+*- subsectioning
 *- find other software to do weighted glm (SAS, ASREML)
 
 3/12/2015
