--- a/paper/references.bib
+++ b/paper/references.bib
@@ -2,8 +2,8 @@
   author = {{Amazon.com Inc.}},
   title = {Amazon Mechanical Turk},
   year = {2005},
-  url = {\url{https://www.mturk.com/mturk/welcome}},
-  urldate = {2015-04-29}
+  howpublished = {\url{https://www.mturk.com/mturk/welcome}},
+  note = {Accessed: 2015-04-29}
 }
 
 @article{Buja,
@@ -116,12 +116,19 @@
   year = {1981},
 }
 
+@MastersThesis{Follett,
+  author = {Lendie Follett},
+  title = {Visual Inference for Multiple Choice Lineups},
+  school = {Iowa State},
+  year = {2014},
+}
+
 @misc{Friendly,
   author = {M. Friendly, D. J. Dennis},
   title = {Milestones in the History of Thematic Cartography, Statistical Graphics, and Data Visualisation},
   year = {2001},
-  url = {http://datavis.ca/milestones/},
-  urldate = {2015-05-01}
+  howpublished = {\url{http://datavis.ca/milestones/}},
+  note = {Accessed: 2015-05-01}
 }
 
 @article{Harrison, 
@@ -280,16 +287,16 @@ url = {http://EconPapers.repec.org/RePEc:eee:moneco:v:10:y:1982:i:2:p:139-162}
   author = {N. Robbins},
   title = {Plotting Differences: Don't Make Your Readers Do the Maths},
   year = {2012},
-  url = {http://www.forbes.com/sites/naomirobbins/2012/03/06/plotting-differences-dont-make-your-readers-do-the-math/},
-  urldate = {2015-05-01}
+  howpublished = {\url{http://www.forbes.com/sites/naomirobbins/2012/03/06/plotting-differences-dont-make-your-readers-do-the-math/}},
+  note = {Accessed: 2015-05-01}
 }
 
 @misc{Sachs,
   author = {J. Sachs},
   title = {1786/1801: William Playfair, Statistical Graphics, and the Meaning of an Event},
   year = {2015},
-  url = {http://www.branchcollective.org/?ps_articles=jonathan-sachs-17861801-william-playfair-statistical-graphics-and-the-meaning-of-an-event/},
-  urldate = {2015-04-29}
+  howpublished = {\url{http://www.branchcollective.org/?ps_articles=jonathan-sachs-17861801-william-playfair-statistical-graphics-and-the-meaning-of-an-event/}},
+  note = {Accessed: 2015-04-29}
 }
 
 @ARTICLE{Sher,
@@ -310,8 +317,8 @@ archivePrefix = "arXiv",
   author = {M. Tuck},
   title = {Gestalt Principles Applied in Design},
   year = {2010},
-  url = {http://sixrevisions.com/web_design/gestalt-principles-applied-in-design/},
-  urldate = {2015-04-29}
+  howpublished = {\url{http://sixrevisions.com/web_design/gestalt-principles-applied-in-design/}},
+  note = {Accessed: 2015-04-29}
 }
 
 @article{Tukey,
