--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -203,6 +203,13 @@ To control our error rate, it is initially obvious that we can simply change $m$
 \end{equation}
 
 If all $K$ observers pick the same plot out of a lineup of twenty, we result in a p-value as small as $1/m^K$ . This research used $m= 20$, giving us a significance level (and Type 1 error rate) of $α = 0.05$. The plot of 'true' data is placed randomly amongst 19 null plots to form the lineup.
+
+If a subject selects multiple plots from the lineup, the p-value has a Bernoulli distribution with a probability equal to $s/m$, where that observer made $s$ selections out of a lineup with $m$ plots \citep{Follett}. In the event that a lineup has observers making different numbers of selections, we have a binomial distribution with different success probabilities, and a Poisson Binomial distribution must be used to calculate the p-value. The probability mass function of a Poisson Binomial distribution can be written as:
+
+$$P(X=x) = \sum_{A \in T_{x}} \prod_{j \in A} p_{j} \prod_{j \in A^{c}} (1-p_{j})$$
+
+Where $T_{x}$ is all possible sets of $x$ trials out of $K$ resulting in a success, $A \in T_{x}$ is a specific set of $x$ trials resulting in a success and $A^{c}$ is the complement to $A$, the set of $K-x$ trials resulting in a failure.
+
 \begin{figure}[htbp]
   \centering
 <<lineup.example, dependson='setup', fig.width=6, fig.height=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE>>=
@@ -314,7 +321,7 @@ p4a <- ggplot(data=sm, aes(x=X1, y=X2)) + geom_point() + labs(title="Smoothed Sc
 
 grid.arrange(p1a, p2a, p3a, p4a, ncol=2)
 @
-  \caption{The same AR(1) data both smoothed and unsmoothed. t = 96, correlation = 0.86}
+  \caption{The same AR(1) data both unsmoothed and smoothed for both plot designs. t = 96, correlation = 0.86}
   \label{smoothing}
 \end{figure}
 
@@ -333,7 +340,9 @@ Additionally, there was a fourth factor for $t = 48, 96$:
 \end{itemize}
 
 Each combination of factors was replicated in three different lineups, giving a total of 288 lineups (2 plots x 8 correlations x 6 sample sizes \& smoothness combinations). 
-The position of the actual data plot in the lineup was randomized. The order that the factors are presented to a subject were also randomized, and each subject saw 5 scatter plots and 5 overlaid lines at a range of all absolute correlation levels. Each subject did not see the same data more than once. Subjects were asked to pick the plot in the lineup that has the strongest association, with basic examples of negatively and positively correlated plots. They also answered with reasons for choosing the plot, and the confidence that they have that this really is the plot showing the strongest correlation. Each subject evaluated 10 lineups, plus a further two trials to eliminate people attempted to game the system. If a trial was not answered correctly, the subject could not evaluate the remaining lineups. If it was answered correctly, the trial data was discarded and the subject moved onto the rest of the lineups. Earlier work by \citet{Majumder:2014} has found that repeated evaluations from a subject does not increase their ability to detect the true plot from a lineup, justifying our treatment of the results as independent evaluations. We recruited subjects from Amazon's Mechanical Turk service and ensured that each lineup was viewed by multiple subjects. In total there were 2088 lineup evaluations, however to better control each subject’s individual visual ability we removed data from subjects with less than ten individual evaluations leaving us with 1684 evaluated lineups for the analysis.  
+The position of the actual data plot in the lineup was randomized. The order that the factors are presented to a subject were also randomized, and each subject saw 5 scatter plots and 5 overlaid lines at a range of all absolute correlation levels. Each subject did not see the same data more than once. Subjects were asked to pick the plot in the lineup that has the strongest association, with basic examples of negatively and positively correlated plots. They also answered with reasons for choosing the plot, and the confidence that they have that this really is the plot showing the strongest correlation. Each subject evaluated 10 lineups, plus a further two trials to eliminate people attempted to game the system. If a trial was not answered correctly, the subject could not evaluate the remaining lineups. If it was answered correctly, the trial data was discarded and the subject moved onto the rest of the lineups. Earlier work by \citet{Majumder:2014} has found that repeated evaluations from a subject does not increase their ability to detect the true plot from a lineup, justifying our treatment of the results as independent evaluations. We recruited subjects from Amazon's Mechanical Turk service and ensured that each lineup was viewed by multiple subjects. In total there were 2088 lineup evaluations, however to better control each subject’s individual visual ability we removed data from subjects with less than ten individual evaluations leaving us with 1684 lineup evaluations for the analysis.  
+
+Subjects were allowed to make multiple selections, which is handled by probability weighting in the model. This increases our data from 1684 to 1849 evaluations.
 
 \begin{figure}[htbp]
   \centering
@@ -394,7 +403,7 @@ ggplot(data=Turk, aes(x=correlation, y=percent, colour=plot)) + geom_smooth(se=F
   theme(legend.position="bottom")
 @
   \label{results}
-  \caption{Response accuracy for unsmoothed data, broken by unsmoothed (left), smoothed (right) and sample size. The dots are data points, the lines represent a naive model average fit. Scatter plots generally showed superior performance, with the overlaid line graphs being particularly weak at revealing negative correlation}
+  \caption{Response accuracy for unsmoothed data, broken by unsmoothed (left), smoothed (right) and sample size. The dots are data points, the lines represent a naive model average fit. Both plot designs have similar performance for positively correlated data, however the overlaid line graphs are particularly weak at revealing negative correlation.}
 \end{figure}
 
 Figure~\ref{results} shows the raw results of the survey and Figure~\ref{powerdiff} shows the difference in power with a $95\%$ confidence interval calculated according to the formula in \ref{eq:2}. Values above zero indicate that the scatter plot had more power to detect the true plot than the overlaid lines.
@@ -427,7 +436,7 @@ ggplot(data=prop) + geom_errorbar(aes(x=r, ymax=upper, ymin=lower)) + geom_point
         geom_hline(aes(yint=0, colour="red")) + labs(title="Difference in Power", x="Correlation", y="Scatterplot Advantage") + facet_grid(n~smoothed)
 @
  \label{powerdiff}
- \caption{Difference in estimated power to reveal the true plot by smoothness and sample size with a 95\% confidence interval. Values above zero indicate the scatter plot is more powerful than the overlaid line graph.}
+ \caption{The difference in estimated power (scatter plot power minus overlaid line power) to reveal the true plot by smoothness and sample size with a 95\% confidence interval. The red line indicates the point where both plot designs are equally powerful while values above this line indicate that the scatter plot is more powerful than the overlaid line graph. Again, the largest advantage difference appears in negative correlation, where the scatter plot is more powerful.}
 \end{figure}
 
 \begin{figure}[htbp]
@@ -436,7 +445,7 @@ ggplot(data=prop) + geom_errorbar(aes(x=r, ymax=upper, ymin=lower)) + geom_point
 ggplot(data=subset(Turk, smoothed==0), aes(x=correlation, y=percent, colour=factor(n))) + geom_smooth(se=F) + geom_point() + facet_grid(plot~.) + scale_colour_discrete(name = "Sample size") +  labs(title="Effect of sample size, with unsmoothed data", y="Percent Correct", x="Correlation") + theme(legend.position="bottom")
 @
  \label{samplesize}
- \caption{Effects of increasing sample size for unsmoothed data. Both plot designs appear to benefit from increased sample sizes}
+ \caption{Replotting figure~\ref{results} to highlight the effects of changes in sample size of unsmoothed data. The scatter plot appears to universaly benefit from increased sample sizes but the overlaid lines only see a benefit in positive correlation.}
 \end{figure}
 
 Figure~\ref{samplesize} demonstrates the effects of changing sample size for unsmoothed data. The scatter plot has increased power to detect correlation almost universally for any increase. Sample size influences the overlaid lines differently, they appears to benefit for positively correlated true plots, but it does not improve the weak performance in negative correlation.
@@ -511,7 +520,7 @@ qplot(correlation, 6-conf_level, data=sub, alpha=I(0.1)) +
   labs(x = "Correlation", y = "Confidence (5=High, 1=Low)")
 @
   \label{confidence2}
-  \caption{Individual subject accuracy versus confidence. There does not appear to be any relationship between the two.}
+  \caption{Individual subject accuracy versus subject average confidence. There does not appear to be any relationship between the two.}
 \end{figure}
 
 There are two major reasons why a subject may fail to detect the true plot out of a lineup. Either the plot design was unable to display correlation for that particular combination of factors (and the analyst would commit a Type II error by not rejecting the null hypothesis), or a null plot that had a greater correlation than the true plot was selected instead (and the analyst would commit a Type I error by rejecting the null hypothesis). We next can analyse these kinds of errors with the pin plots found in Figure~\ref{pins}. The frequency of selection of each plot in each lineup, either true or null, is represented by a pin, placed at the value of the correlation between the two variables shown in that plot. The correlation of the selected plot is on the x-axis and the frequency of selection is plotted on the y axis. The correlation of the simulated (true) data (r=-0.9, -0.7, -0.3, 0.3, 0.7, 0.9) in the plot, the sample size (t=12, 24, 48, 96), and the plot design (unsmoothed/smoothed, scatterplot/lineplot) is used to facet the plots. The blue pins indicate the true plots and the red pins indicate the null plots. If the plot design has the power to display correlation, we would expect the highest correlation plot to be selected, leading to a Type I error where a plot from the null distribution spuriously had high correlation. We find that this is generally not the case. The selections appear to have a wide range of correlations, indicating that if a subject selected a null plot it was typically not due to excess spurious correlation. Instead the failure to select the highest correlated plot indicates that a Type II error was committed rather than Type I as the plot designs did not have the power to differentiate between medium and low correlation plots. However, for the scatter plot, whenever there was a plot with a very strong correlation, usually in the form of the true plot, it was overwhelmingly selected. For the overlaid lines this mostly occurred only for plots with strong positive correlation, which is consistent with its general lack of power to reveal negative relationships in data. 
@@ -556,7 +565,7 @@ grid.arrange(pin.a, pin.b, pin.c, pin.d, ncol=1)
 @
 
   \label{pins}
-  \caption{Pin plots of the subject selections of each lineup. On the x-axis is the correlation of the plot (there is potentially spurious correlation in the null plots), and on the y-axis is the proportion a plot was chosen. Red pins indicate null plots and blue indicates the true plot, occasionally the true plot does not appear as it has a frequency of zero and is visually blocked by the red pins. The pin plots are split with true plot correlation on the columns and sample size on the rows. Each plot contains information from all three lineups with that unique combination of factors: plot design, smoothness, sample size and true correlation.}
+  \caption{Pin plots of the subject selections of each lineup, by design, smoothness, true plot correlaition and sample size. On the x-axis is the correlation of the plot (there is potentially spurious correlation in the null plots), and on the y-axis is the proportion a plot was chosen. Each plot contains data from the three lineups with the requisite characteristics. Red pins indicate null plots and blue indicates the true plot, occasionally the true plot does not seem to appear as it has a proportion of zero and is visually blocked by the red pins. Strongly correlated plot seem to be selected regardless of if the relationship is spurious (a null plot) or real (a true plot).}
 \end{figure}
 
 Occasionally there was an anomaly where a single null plot was selected with a high frequency despite having a weak correlation. Occasionally the null distribution cangenerate visually interesting patterns that draw the analyst’s attention.  We asked subjects for reasons behind their selections and found that choosing on the basis that “the points in the plot were close together”, or had “a unique pattern” more often led to an unsuccessful detection. Conversely, decisions based on “matching the peaks and troughs” of the overlaid lines or “seeing a line formed in the dots” of the scatter plot were more likely to be successful in identification of the true plot. However, these true detections are, on average, made less confidently than unsuccessful evaluations, which indicates that decisions made on the basis of closeness or patterns are more convincing of an association than the more successful reasons. 
@@ -565,28 +574,30 @@ Occasionally there was an anomaly where a single null plot was selected with a h
   \centering
   \includegraphics[width=0.5\textwidth]{anom1}
   \label{anom1}
-  \caption{A lineup of unsmoothed overlaid lines with a sample size of 12 and true correlation of -0.707. The true plot in position 8 was not detected in five evaluations. However, plot 13 was selected four times, (p –value < 0.001) despite having a correlation of only 0.225. When asked for a reason of their selections, subjects answered that the lines were closest together.}
+  \caption{A lineup of unsmoothed scatter plots with a sample size of 24. The true plot is located in position 4 with a correlation of -0.491, and was selected by one out of eleven observers (p = 0.33). The plot in position 6 was selected by nine of these eleven observers (p < 0.001) despite having a correlation of -0.037. Subjects most often cited the clustering effect shown as the reason for their selection, an example of the over-interpretation of randomness.}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
   \includegraphics[width=0.5\textwidth]{anom2}
   \label{anom2}
-  \caption{A lineup of unsmoothed scatter plots with a sample size of 24. The true plot is located in position 4 with a correlation of -0.491, and was selected by one out of eleven observers (p = 0.33, see formula \ref{eq:1}). The plot in position 6 was selected by nine of these eleven observers (p < 0.001) despite having a correlation of -0.037. This null plot shows a unique clustering effect that draws in the observer despite not having any linear relationship in the data, an example of the over-interpretation of randomness. Subjects most often cited the clustering pattern formed as the reason for their selection. The final selection was position 8, with a correlation of -0.226 (p = 0.33).}
+  \caption{A lineup of unsmoothed overlaid lines with a sample size of 12 and true correlation of -0.707. The true plot in position 8 was not detected in five evaluations. However, the null plot in position 13 was selected four times, (p –value < 0.001) despite having a correlation of only 0.225. When asked for a reason of their selections, subjects typically answered that the lines were close together, another misleading visual artefact of the random data.} 
 \end{figure}
 
-Figures~\ref{anom1} and \ref{anom2} show lineups where a null plot with a strong pattern led to its selection over the data plot.  Mostly, when a null plot was chosen over the data plot it was because the correlation was stronger, but in a few lineups a null plot with small correlation was selected by many subjects. In Figure~\ref{anom1}, the true data plot is in position 4, but 9/11 subjects chose plot 6. Plot 6 is unusual, most of the points are scattered around the vertical median, but there are two outlying points, one with a high y-value and one with a low y-value.  Other concurrent work has suggested that outliers are pre-attentive patterns and this plot selection by the observers is consistent with that. Figure~\ref{anom2} above is another example of where subjects chose a null plot that had smaller correlation than the data plot. Four out of five evaluations selected the null plot in position 13,  instead of the data plot in position 8. Plot 13 has a correlation of 0.225, smaller (in absolute value) than the -0.707 of plot 8.  This selection is in-line with Wertheimer’s gestalt law of common fate. It appears to be strongly correlated in the beginning of the series but breaks apart towards the end. The selection implies that subjects selecting this plot focused on the joint path of the two series early in the plot and ignored the contradictory evidence of no relationship as they diverged later in the plot.  It also confounded by the seeming preference to find positive correlation over negative correlation, and we suspect that if one of the series in plot 8 had the values flipped, then the strong positive correlation would have been noticed.
+Figures~\ref{anom1} and \ref{anom2} show lineups where a null plot with a strong pattern led to its selection over the data plot.  Mostly, when a null plot was chosen over the data plot it was because the correlation was stronger, but in a few lineups a null plot with small correlation was selected by many subjects. In Figure~\ref{anom1}, the true data plot is in position 4, but 9 out of 11 subjects chose plot 6. Plot 6 is unusual, most of the points are scattered around the vertical median, but there are two outlying points, one with a high y-value and one with a low y-value.  Other concurrent work has suggested that outliers are pre-attentive patterns and this plot selection by the observers is consistent with that. Figure~\ref{anom2} above is another example of where subjects chose a null plot that had smaller correlation than the data plot. Four out of five evaluations selected the null plot in position 13,  instead of the data plot in position 8. Plot 13 has a correlation of 0.225, smaller (in absolute value) than the -0.707 of plot 8.  This selection is in-line with Wertheimer’s gestalt law of common fate. It appears to be strongly correlated in the beginning of the series but breaks apart towards the end. The selection implies that subjects selecting this plot focused on the joint path of the two series early in the plot and ignored the contradictory evidence of no relationship as they diverged later in the plot.  It also confounded by the seeming preference to find positive correlation over negative correlation, and we suspect that if one of the series in plot 8 had the values flipped, then the strong positive correlation would have been noticed.
 
 \subsection{Modelling Subject Responses}
 
 A mixed effects logit model is used separately for scatter plot and overlaid line evaluations. The tested model is:
 
-$$Power_{ijkt} = \psi\left\{ \beta_{0} + \beta_{1} x_{1,i}  + \beta_{2} x_{2,j}  + \beta_{3} x_{3,k} + \beta_{4} x_{4,t} + \beta_{5} x_{1,i} \* x_{2,j} + \gamma_{1} \cdot z_{1,s} \right\}$$
+$$Power_{ijkt} = \psi\left\{ \beta_{0} + \beta_{1} x_{1,i}  + \beta_{2} x_{2,j}  + \beta_{3} x_{3,k} + \beta_{4} x_{4,t} + \beta_{5} x_{1,i} \* x_{2,j} + \gamma z_{s} + \epsilon_{ijkt} \right\}$$
 
-Where $\psi$ is the logit link function, $\psi(x) = \frac{e^{x}}{1+e^{x}}$, $x_{1}$ is the absolute value of the true plot correlation, with $i \in {0.3, 0.5, 0.7, 0.9}$, $x_{2,j}$ is a dummy variable for the sign of the true plot correlation, with $j = 0$ for negative correlation, $x_{3,k}$ is a dummy variable for the smoothing procedure, with $k = 0$ for unsmoothed data, $x_{4,t}$ is the sample size, with $t \in {12, 24, 48, 96}$ and $z_{s}$ is an observer specific random effect, with $s = 1, 2, \cdot , 157$
+Where $\psi$ is the logit link function, $\psi(x) = \frac{e^{x}}{1+e^{x}}$, $x_{1}$ is the absolute value of the true plot correlation, with $i \in {0.3, 0.5, 0.7, 0.9}$, $x_{2,j}$ is a dummy variable for the sign of the true plot correlation, with $j = 0$ for negative correlation, $x_{3,k}$ is a dummy variable for the smoothing procedure, with $k = 0$ for unsmoothed data, $x_{4,t}$ is the sample size, with $t \in {12, 24, 48, 96}$ and $z_{s}$ is an observer specific random effect, with $s = 1, 2, \cdot , 157$. It is assumed that $\epsilon_{ijkt} \sim \mathcal{N} (0, \Sigma_{ijkt})$ and $\gamma \sim \mathcal{N} (0, \delta)$
+
+Where a subject made multiple selections, each selection is treated as a separate data point with a probability weighting equal to the inverse of the number of selections.
 
 \begin{table}[htp]
-\caption{Weighted Mixed Effects Logit Model for the predicted power of plot design. Sample size for scatter plot evaluations: 900, overlaid lines: 949, total: 1849. Default plot design is an overlaid lines type. The model is fitted using the glimmix procedure in SAS. Subjects with less than ten lineup evaluations were removed from the sample.} %Sign = 1 if correlation > 0, 0 otherwise. Each plot design is estimated separately. Results must be transformed via the logit link function to generate a power prediction. Subjects with less than ten lineup evaluations were removed from the sample.
+\caption{Weighted Mixed Effects Logit Model for the predicted power of plot design. Sample size for scatter plot evaluations: 900, overlaid lines: 949, total: 1849. Default plot design is overlaid lines. The model is fitted using the GLIMMIX procedure in SAS.} %Sign = 1 if correlation > 0, 0 otherwise. Each plot design is estimated separately. Results must be transformed via the logit link function to generate a power prediction. Subjects with less than ten lineup evaluations were removed from the sample.
 
 \label{tab1}
 \centering
@@ -614,8 +625,8 @@ subsetted <- select(full.sub, rabs, n, alpha, rsgn, smoothed, plot, subj_id, wei
 powercoef <- read.csv("sas/PowerEstimates.csv")
 powercoef <- powercoef[,-1]
 rownames(powercoef) <- c("Intercept", "abs(r)", "sign(r)", "abs(r)*sign(r)", "smoothed", "t", "plot", "plot*abs(r)", "plot*sign(r)", "plot*abs(r)*sign(r)", "plot*smoothed", "plot*t")
-kable(powercoef[1:6,], format="latex", digits=2)
-kable(powercoef[7:12,], format="latex", digits=2)
+kable(powercoef, format="latex", digits=2)
+#kable(powercoef[7:12,], format="latex", digits=2)
 @
 \end{table}
 
@@ -625,11 +636,12 @@ Figure~\ref{powermodel} shows the fitted unrestricted model, with power predicti
 \begin{figure}[htbp]
  \centering
 <<powermodel, dependson='powerfit', fig.height=6, fig.width=6, out.width='0.7\\textwidth', echo=FALSE>>=
-rabs <- seq(0,0.9,0.02)
+rabs <- seq(0,0.9,0.03)
 t <- c(12, 24, 48, 96)
 #pred <- data.frame(expand.grid(rabs=rabs, t=t, alpha=log(.05/0.95), rsgn=c(0,1),
 #                                      smoothed=c(0,1), plot=c(0,1),
 #                                      subj_id=full.sub$subj_id))
+#pred <- subset(pred, smoothed==0 | smoothed == 1 & n ==48 | smoothed ==1 & n ==96)
 #write.csv(pred, "sas/predgrid.csv") # these lines are done, but its a large file so commented out for knitr
 #Code exported to sas, see sas/model\ fit.sas
 prediction <- read.csv("sas/predfit.csv") #Large file, very slow
@@ -646,7 +658,7 @@ qplot(r, RandomEf, data=prediction, color=plot,
   geom_line(aes(y=FixedEf), size=2, alpha=1) + theme_bw() + facet_wrap(~t, ncol = 2) + theme(aspect.ratio=1.2)
 @
   \label{powermodel}
-  \caption{Predicted power fit from the mixed effects logit power model. The weakness of the overlaid line graph in negative correlation and  the scatter plot's gain from sample size are highlighted.}
+  \caption{Predicted power fit from the mixed effects logit power model. The thicker lines shows the fixed effects prediction while the thinner lines show the range of random effects, the observer's visual ability. The weakness of the overlaid line graph in negative correlation and the scatter plot's gain from sample size are highlighted.}
 \end{figure}
 
 \begin{figure}
@@ -657,14 +669,14 @@ p2b <- ggplot(data=subset(glmm.resid, plot==0)) + geom_histogram(aes(y=..density
 grid.arrange(p1b, p2b, ncol=2, top = "Residual density plots")
 @
   \label{residuals}
-  \caption{Histograms of residuals for both the scatter plot (left) and the overlaid lines (right).}
+  \caption{Histograms of residuals for both the scatter plot (left) and the overlaid lines (right). Both appear to be normal}
 \end{figure}
 
 Analysing the residuals allows us to test the model fit. As the dependent variable is a binary variable, the model will only have a residual close to zero if it predicts either a power of zero or one. As the rate of picking the true plot purely by chance is, $1/m$ or 0.05, the model should never predict a power of zero even if the plot has no ability to display correlation. This effect is especially notable in the overlaid line residual plot, the model fit is never close to zero or one so the residuals are split with no values around zero.
 The scatter plot residuals are normally distributed with a Jarque-Bera normality test statistic of 0.09 (p-value = 0.95), however the overlaid lines strongly reject normality with a Jarque-Bera statistic of 75.6 (p-value = 0.00). The significance tests associated with the overlaid lines are only valid asymptotically. Also concerning, the mean value of the overlaid lines residuals is - 0.08, implicating that the model tends to over-predict power, further weakening the performance of this plot design relative to the scatter plot.
-This unrestricted model used in to test the symmetry restriction for the scatter plot design is written formally as:
+This unrestricted model used in to test the symmetry restriction for the scatter plot design was written earlier as:
 
-$$Power_{UR,s} = \psi\left\{ \beta_{s,0} + \beta_{s,1} \cdot |\alpha| + \beta_{s,2}\cdot Sign + \beta_{s,3}\cdot Smoothed + \beta_{s,4}\cdot t + \beta_{s,5}\cdot |\alpha| \cdot Sign + \gamma_{s,1} \cdot subject_{j} \right\}$$
+$$Power_{UR,ijkt} = \psi\left\{ \beta_{0} + \beta_{1} x_{1,i}  + \beta_{2} x_{2,j}  + \beta_{3} x_{3,k} + \beta_{4} x_{4,t} + \beta_{5} x_{1,i} \* x_{2,j} + \gamma z_{s} + \epsilon_{ijkt} \right\}$$
 
 Testing if the scatter plot displays positive and negative correlation equally is equivalent to testing the hypothesis:
 
@@ -674,7 +686,8 @@ Testing if the scatter plot displays positive and negative correlation equally i
 \end{itemize}
 
 The restricted model is therefore:
-$$Power_{R,s} = \psi\left\{ \beta_{s,0}+\beta_{s,1}\cdot |\alpha| + \beta_{s,3}\cdot Smoothed + \beta_{s,4}\cdot t +\gamma_{s,1} \cdot subject_{j} \right\}$$
+
+$$Power_{R,ijkt} = \psi\left\{ \beta_{0} + \beta_{1} x_{1,i} + \beta_{3} x_{3,k} + \beta_{4} x_{4,t} + \gamma z_{s} + \epsilon_{ijkt} \right\}$$
 
 The unrestricted model has a log-likelihood value of -346.9, where the restricted model has a log-likelihood of -355.8. The test statistic is therefore, with a null distributed as a $\chi^{2}_{2}$ variable. The null hypothesis is rejected (p = 0.02). We find that the scatter plot has asymmetric performance over negative and positive values of correlation. This may be a result of unwittingly introducing bias into the methodology, the first scatter plot shown to subjects in the instruction set always had strong positive correlation. 
 A similar setup rejects the symmetric performance of the overlaid line graphs with a log likelihood ratio test statistic of 105.30 (p-value < 0.001). Such an extreme result is due to a systematic difference in the overlaid line graph and cannot be attributed simply to bias.
@@ -697,8 +710,8 @@ p.value <- sapply(time.fit[,3], pv)
 time.fit <- cbind(time.fit, p.value)
 time.fit <- time.fit[c(1, 2, 4, 3, 5, 8, 7, 6, 9, 11, 10, 12, 14, 13),] #separate into main effects then interaction effects in same order
 rownames(time.fit) <- c("Intercept", "Smoothed", "t", "r", "sign(r)", "r*sign(r)", "correct", "Plot", "Plot*Smoothed", "Plot*t", "Plot*r", "Plot*sign(r)", "Plot*r*sign(r)", "Plot*correct")
-kable(time.fit[1:7,], format="latex", caption="Main Effects", digits=2)
-kable(time.fit[8:14,], format="latex", caption="Interaction Effects", digits=2)
+kable(time.fit[1:14,], format="latex", caption="Main Effects", digits=2)
+#kable(time.fit[8:14,], format="latex", caption="Interaction Effects", digits=2)
 @
 \end{table}
 
