--- a/paper/references.bib
+++ b/paper/references.bib
@@ -103,7 +103,7 @@
 
 
 @article{Diaconis,
-  author = {DIACONIS, PERSI},
+  author = {Diaconis, Persi},
   title = {Magical Thinking in the Analysis of Scientific Data},
   journal = {Annals of the New York Academy of Sciences},
   volume = {364},
