--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -90,6 +90,9 @@ library(mFilter)
 library(grid)
 library(gridExtra)
 library(stringr)
+library(ipapi)
+library(maps)
+library(moments)
 #library(pander)
 #library(splitstackshape) - changed cSplit to unnest
 #library(readr)
@@ -590,9 +593,9 @@ Figures~\ref{anom1} and \ref{anom2} show lineups where a null plot with a strong
 
 A mixed effects logit model is used separately for scatter plot and overlaid line evaluations. The tested model is:
 
-$$Power_{ijkt} = \psi\left\{ \beta_{0} + \beta_{1} x_{1,i}  + \beta_{2} x_{2,j}  + \beta_{3} x_{3,k} + \beta_{4} x_{4,t} + \beta_{5} x_{1,i} \* x_{2,j} + \gamma z_{s} + \epsilon_{ijkt} \right\}$$
+$$Power_{ijklt} = \psi\left\{ \beta_{0} + \beta_{1} x_{1,i}  + \beta_{2} x_{2,j}  + \beta_{3} x_{3,k} + \beta_{4} x_{4,t} + \beta_{5} x_{1,i} \* x_{2,j} + \beta_{6} x_{5,l}(\beta_{7} + \beta_{8} x_{1,i}  + \beta_{9} x_{2,j}  + \beta_{10} x_{3,k} + \beta_{11} x_{4,t} + \beta_{12} x_{1,i} \* x_{2,j}) \gamma z_{s} + \epsilon_{ijkt} \right\}$$
 
-Where $\psi$ is the logit link function, $\psi(x) = \frac{e^{x}}{1+e^{x}}$, $x_{1}$ is the absolute value of the true plot correlation, with $i \in {0.3, 0.5, 0.7, 0.9}$, $x_{2,j}$ is a dummy variable for the sign of the true plot correlation, with $j = 0$ for negative correlation, $x_{3,k}$ is a dummy variable for the smoothing procedure, with $k = 0$ for unsmoothed data, $x_{4,t}$ is the sample size, with $t \in {12, 24, 48, 96}$ and $z_{s}$ is an observer specific random effect, with $s = 1, 2, \cdot , 157$. It is assumed that $\epsilon_{ijkt} \sim \mathcal{N} (0, \Sigma_{ijkt})$ and $\gamma \sim \mathcal{N} (0, \delta)$
+Where $\psi$ is the logit link function, $\psi(x) = \frac{e^{x}}{1+e^{x}}$, $x_{1}$ is the absolute value of the true plot correlation, with $i \in {0.3, 0.5, 0.7, 0.9}$, $x_{2,j}$ is a dummy variable for the sign of the true plot correlation, with $j = 0$ for negative correlation, $x_{3,k}$ is a dummy variable for the smoothing procedure, with $k = 0$ for unsmoothed data, $x_{4,t}$ is the sample size, with $t \in {12, 24, 48, 96}$ and $x_{5,l}$ denotes the plot design, with $l =0$ for the overlaid lines type. Finally, $z_{s}$ is an observer specific random effect, with $s = 1, 2, \cdot , 157$. It is assumed that $\epsilon_{ijkt} \sim \mathcal{N} (0, \Sigma_{ijkt})$ and $\gamma \sim \mathcal{N} (0, \delta)$
 
 Where a subject made multiple selections, each selection is treated as a separate data point with a probability weighting equal to the inverse of the number of selections.
 
@@ -670,6 +673,8 @@ qplot(r, RandomEf, data=prediction, color=plot,
 p1b <- ggplot(data=subset(glmm.resid, plot==1)) + geom_histogram(aes(y=..density.., x=residual)) + labs(title="Scatter plot", x="residual", y=element_blank())
 p2b <- ggplot(data=subset(glmm.resid, plot==0)) + geom_histogram(aes(y=..density.., x=residual))+ labs(title="Overlaid Lines", x="residual", y=element_blank())
 grid.arrange(p1b, p2b, ncol=2, top = "Residual density plots")
+jarque.test(subset(glmm.resid), plot==1)$residual
+jarque.test(subset(glmm.resid), plot==0)$residual
 @
   \label{residuals}
   \caption{Histograms of residuals, $\hat{\epsilon}$ for both the scatter plot (left) and the overlaid lines (right). Both appear to be normal, though there are some extreme outliers.}
@@ -682,6 +687,7 @@ The scatter plot residuals are normally distributed with a Jarque-Bera normality
   \centering
 <<residuals, dependson='powerfit', fig.height=4, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
 ggplot(data=randomeffects) + geom_histogram(aes(x=re, y=..density..)) + xlab("Random Effects") + ylab(NULL)
+jarque.test(randomeffects$re)
 @
   \label{random}
   \caption{Histograms of estimated subject random effects, $\hat{\gamma}$}
@@ -740,5 +746,46 @@ If a data analyst is required to use overlaid line graphs in their work, substan
 
 \bibliographystyle{asa}
 \bibliography{references}
+
+\section{Appendix}
+
+\begin{table}
+\lab{tab3}
+\centering
+<<answertables, dependson='setup', echo=FALSE, results='hide', message=FALSE, error=FALSE, warning=FALSE>>=
+turk.tbl <- select(Turk, test_param, smoothed, r, n, correct, attempt)
+turk.tbl$result <- paste(round(turk.tbl$correct, 0), turk.tbl$attempt, sep="/")
+turk.tbl <- turk.tbl[order(turk.tbl$r, turk.tbl$n),]
+scatter.uns <- data.frame(c(12, "", "", 24, "", "", 48, "", "", 96, "", ""), matrix(subset(turk.tbl, smoothed==0 & test_param=="scatter")$result, ncol=8))
+scatter.sm <- data.frame(c(12, "", "", 24, "", "", 48, "", "", 96, "", ""), matrix(subset(turk.tbl, smoothed==1 & test_param=="scatter")$result, ncol=8))
+line.uns <- data.frame(c(12, "", "", 24, "", "", 48, "", "", 96, "", ""), matrix(subset(turk.tbl, smoothed==0 & test_param=="line")$result, ncol=8))
+line.sm <- data.frame(c(12, "", "", 24, "", "", 48, "", "", 96, "", ""), matrix(subset(turk.tbl, smoothed==1 & test_param=="line")$result, ncol=8))
+colnames(scatter.uns) <- c("", "-0.9", "-0.7", "-0.5", "-0.3", "0.3", "0.5", "0.7", "0.9")
+colnames(scatter.sm) <- c("","-0.9", "-0.7", "-0.5", "-0.3", "0.3", "0.5", "0.7", "0.9")
+colnames(line.uns) <- c("","-0.9", "-0.7", "-0.5", "-0.3", "0.3", "0.5", "0.7", "0.9")
+colnames(line.sm) <- c("","-0.9", "-0.7", "-0.5", "-0.3", "0.3", "0.5", "0.7", "0.9")
+kable(scatter.uns, format="latex", caption="Unsmoothed scatter plot results")
+kable(scatter.sm, format="latex", caption="Smoothed scatter plot results")
+kable(line.uns, format="latex", caption="Unsmoothed overlaid line results")
+kable(line.sm, format="latex", caption="Smoothed overlaid line results")
+@
+\end{table}
+
+Table~\ref{tab3} contains the true plot detections / attempts for each lineup in the data collection. True plot correlation is on the x axis and t is on the y axis. 
+
+\begin{figure}[htbp]
+\lab{map}
+\centering
+<<map, , dependson='setup', echo=FALSE, results='hide', message=FALSE, error=FALSE, warning=FALSE>>=
+location <- read.csv("location.csv")
+map.dat <- map_data("world")
+ggplot() + geom_polygon(aes(long,lat, group=group), fill="grey65", data=map.dat) + theme_bw() +
+  geom_point(data=location, aes(x=lon, y=lat, colour= "blue")) +scale_colour_manual(values=c("#FF5500", "#00FFFF")) + theme(axis.text=element_blank(), axis.title=element_blank(), legend.position="none")
+@
+\end{figure}
+
+Figure~\ref{map} shows the location of the recruited subjects. The majority reside in the United States but some are spread around other countries in Europe and Asia.
+
+
 
 \end{document}
