--- a/paper/references.bib
+++ b/paper/references.bib
@@ -229,6 +229,13 @@ month={Nov}
  keywords = {correlation visualization, evaluation of visualization, parallel coordinate plots, perception of correlation, scatterplots, statistical graphs},
 } 
 
+@phdthesis{Loy,
+  author       = {Adam Loy}, 
+  title        = {Diagnostics for Mixed/Hierarchical Linear Models},
+  school       = {Iowa State},
+  year         = 2013,
+}
+
 @ARTICLE{Majumder:2014,
    author = {{Majumder}, M. and {Hofmann}, H. and {Cook}, D.},
     title = "{Human Factors Influencing Visual Statistical Inference}",
