--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -36,6 +36,7 @@
 
 
 \begin{document}
+\SweaveOpts{concordance=TRUE}
 
 \def\spacingset#1{\renewcommand{\baselinestretch}%
 {#1}\small\normalsize} \spacingset{1}
@@ -333,7 +334,7 @@ The lineups were generated with three basic factors:
 \begin{itemize}
   \item Factor 1: Plot design, levels = scatter plot, overlaid time series
   \item Factor 2: Sample size (t), levels = 12, 24, 48, 96
-  \item Factor 3: True plot correlation, levels 
+  \item Factor 3: True plot correlation, $\rho$, levels = $\pm \{0.3, 0.5, 0.7, 0.9\}$
 \end{itemize}
 
 Additionally, there was a fourth factor for $t = 48, 96$:
@@ -546,9 +547,9 @@ count.setup$choice[str_detect(count.setup$actual_location, count.setup$response_
 counts <- data.frame(table(count.setup$pic_id, count.setup$choice))
 counts$Var1 <- as.numeric(as.character(counts$Var1))
 counts$Var2 <- as.numeric(as.character(counts$Var2))
-colnames(counts) <- c("lineup", "plot", "count")
-pin <- merge(counts, Turk[-19], by.x="lineup", by.y="pic_id")
-pin <- select(pin, lineup, plot, count, smoothed, true_pos, n, test_param, r, attempt)#pin[,c(1, 2, 3, 12, 13, 15, 11, 20)]
+colnames(counts) <- c("lineup", "plots", "count")
+pin <- merge(counts, Turk[-17], by.x="lineup", by.y="pic_id")
+pin <- select(pin, lineup, plots, count, smoothed, true_pos, n, test_param, r, attempt)#pin[,c(1, 2, 3, 12, 13, 15, 11, 20)]
 pin$r <- factor(pin$r)
 colnames(pin) <- c("lineup", "plot", "count", "smoothed", "true_pos", "n", "design", "r", "attempt")
 pin <- mutate(pin, design=ifelse(design=="scatter", "Scatterplot", "Overlaid Lines"))#, smoothed=ifelse(smoothed=="no", 0, 1))
@@ -595,7 +596,7 @@ A mixed effects logit model is used separately for scatter plot and overlaid lin
 
 $$Power_{ijklt} = \psi\left\{ \beta_{0} + \beta_{1} x_{1,i}  + \beta_{2} x_{2,j}  + \beta_{3} x_{3,k} + \beta_{4} x_{4,t} + \beta_{5} x_{1,i} \* x_{2,j} + \beta_{6} x_{5,l}(\beta_{7} + \beta_{8} x_{1,i}  + \beta_{9} x_{2,j}  + \beta_{10} x_{3,k} + \beta_{11} x_{4,t} + \beta_{12} x_{1,i} \* x_{2,j}) \gamma z_{s} + \epsilon_{ijkt} \right\}$$
 
-Where $\psi$ is the logit link function, $\psi(x) = \frac{e^{x}}{1+e^{x}}$, $x_{1}$ is the absolute value of the true plot correlation, with $i \in {0.3, 0.5, 0.7, 0.9}$, $x_{2,j}$ is a dummy variable for the sign of the true plot correlation, with $j = 0$ for negative correlation, $x_{3,k}$ is a dummy variable for the smoothing procedure, with $k = 0$ for unsmoothed data, $x_{4,t}$ is the sample size, with $t \in {12, 24, 48, 96}$ and $x_{5,l}$ denotes the plot design, with $l =0$ for the overlaid lines type. Finally, $z_{s}$ is an observer specific random effect, with $s = 1, 2, \cdot , 157$. It is assumed that $\epsilon_{ijkt} \sim \mathcal{N} (0, \Sigma_{ijkt})$ and $\gamma \sim \mathcal{N} (0, \delta)$
+Where $\psi$ is the logit link function, $\psi(x) = \frac{e^{x}}{1+e^{x}}$, $x_{1}$ is the absolute value of the true plot correlation, $\rho$, with $i \in {0.3, 0.5, 0.7, 0.9}$, $x_{2,j}$ is a dummy variable for the sign of the true plot correlation, with $j = 0$ for negative correlation, $x_{3,k}$ is a dummy variable for the smoothing procedure, with $k = 0$ for unsmoothed data, $x_{4,t}$ is the sample size, with $t \in {12, 24, 48, 96}$ and $x_{5,l}$ denotes the plot design, with $l =0$ for the overlaid lines type. Finally, $z_{s}$ is an observer specific random effect, with $s = 1, 2, \cdot , 157$. It is assumed that $\epsilon_{ijkt} \sim \mathcal{N} (0, \Sigma_{ijkt})$ and $\gamma \sim \mathcal{N} (0, \delta)$
 
 Where a subject made multiple selections, each selection is treated as a separate data point with a probability weighting equal to the inverse of the number of selections.
 
@@ -637,7 +638,12 @@ kable(powercoef, format="latex", digits=2)
 @
 \end{table}
 
-Table \ref{tab1} summarises the model fits. It can be confusing the interpret the model estimates, and at first glance it appears the overlaid lines (-0.660) are substantially more powerful than the scatter plot (-4.403), but this is misleading, and  interpreting the the full model involves combining the estimates for the different interactions with correlation and sign. Taking correlation into account, the scatter plot shows superior performance. It needs to be noted that we only tested correlations at  0.3, 0.5, 0.7 and 0.9, so the results below an absolute value of 0.3 are unreliable and may be artifacts of regression smoothing methods. The correlation:sign interaction shows that the scatter plot has close to symmetric performance for positive (correlation:sign + correlation) and negative (-correlation) correlation while the overlaid line graph is substantially weaker for negative values of correlation. Surprisingly, smoothing out the excess 'noise' from a time series had a negative effect on scatter plots, despite a minimal visual impact of smoothed (Figure~\ref{smoothing}). It did have a significant positive impact on the power of overlaid line graphs. Increasing the sample size, $t$, improved the power of the scatter plot but it was not statistically significant for the overlaid line graph.
+Table \ref{tab1} summarises the model estimates. It can be confusing the interpret the model estimates, and at first glance it appears the negative plot coefficient implies that overliad lines are substantially more powerful than the scatter plot, but this is misleading and interpreting the full model involves combining the estimates for the different interactions with abs($\rho$) and sign($\rho$). abs($\rho$) models the power difference between low and high correlations, and abs($\rho)*sign($\rho$) models an increase in power appearing in positive but not negative correlation. 
+Taking these into account, the scatter plot shows superior performance and higher values of abs($\rho$), It needs to be restated that we only tested correlations at  0.3, 0.5, 0.7 and 0.9, so the results below an absolute value of 0.3 are unreliable and may be artifacts of regression smoothing methods.
+
+%The correlation:sign interaction shows that the scatter plot has close to symmetric performance for positive (correlation:sign + correlation) and negative (-correlation) correlation while the overlaid line graph is substantially weaker for negative values of correlation.
+Smoothing out the excess 'noise' from a time series had a minimal effect on scatter plots(...), it did have a significant positive impact on the power of overlaid line graphs as smoothing induces a large visual difference (Figure~\ref{smoothing}. Increasing the sample size, $t$, improved the power of the scatter plot but it was not statistically significant for the overlaid line graph.
+
 Figure~\ref{powermodel} shows the fitted unrestricted model, with power predictions (y axis) plotted against correlation (x axis) for each of the four sample sizes tested. The thicker lines represent the fixed effect fit, or the average performance across all tested individuals whilst the thinner lines represent the random effects fit, the variation in power that can be attributed to an individual's visual skill. \citet{Majumder:2014} show that this random visual skill is not impacted by demographics such as age and gender; whilst education increases the power of a graphic display by only approximately one percent, not a practically significant amount. We did not include these characteristics of the individual in the modelling due to this lack of significance. Figure~\ref{powermodel} especially highlights the weak performance of the overlaid lines and the benefits of smoothing.
 
 \begin{figure}[htbp]
@@ -669,29 +675,43 @@ qplot(r, RandomEf, data=prediction, color=plot,
 
 \begin{figure}
   \centering
-<<residuals, dependson='powerfit', fig.height=4, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
-p1b <- ggplot(data=subset(glmm.resid, plot==1)) + geom_histogram(aes(y=..density.., x=residual)) + labs(title="Scatter plot", x="residual", y=element_blank())
-p2b <- ggplot(data=subset(glmm.resid, plot==0)) + geom_histogram(aes(y=..density.., x=residual))+ labs(title="Overlaid Lines", x="residual", y=element_blank())
-grid.arrange(p1b, p2b, ncol=2, top = "Residual density plots")
-jarque.test(subset(glmm.resid), plot==1)$residual
-jarque.test(subset(glmm.resid), plot==0)$residual
+<<residuals, dependson='powermodel', fig.height=4, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+ggplot(data=glmm.resid) + geom_histogram(aes(y=..density.., x=residual), binwidth=2) + labs(x=NULL, y=NULL)
 @
   \label{residuals}
   \caption{Histograms of residuals, $\hat{\epsilon}$ for both the scatter plot (left) and the overlaid lines (right). Both appear to be normal, though there are some extreme outliers.}
 \end{figure}
 
-Analysing the residuals allows us to test the model fit. As the dependent variable is a binary variable, the model will only have a residual close to zero if it predicts either a power of zero or one. As the rate of picking the true plot purely by chance is, $1/m$ or 0.05, the model should never predict a power of zero even if the plot has no ability to display correlation. This effect is especially notable in the overlaid line residual plot, the model fit is never close to zero or one so the residuals are split with no values around zero.
-The scatter plot residuals are normally distributed with a Jarque-Bera normality test statistic of 0.09 (p-value = 0.95), however the overlaid lines strongly reject normality with a Jarque-Bera statistic of 75.6 (p-value = 0.00). The significance tests associated with the overlaid lines are only valid asymptotically. Also concerning, the mean value of the overlaid lines residuals is - 0.08, implicating that the model tends to over-predict power, further weakening the performance of this plot design relative to the scatter plot.
+Analysing the level one residuals, $\hat{\epsilon_{i}}$ and level two residuals, $\hat{\gamma_{i}}$ allows us to test the model fit as described \citet{Loy}. There are some negative extreme outliers but the distributional assumption appears to hold.
 
-\begin{figure}
+\begin{figure}[htbp]
   \centering
-<<residuals, dependson='powerfit', fig.height=4, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
-ggplot(data=randomeffects) + geom_histogram(aes(x=re, y=..density..)) + xlab("Random Effects") + ylab(NULL)
-jarque.test(randomeffects$re)
+<<random, dependson='powerfit', fig.height=4, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+ggplot(data=randomeffects) + geom_histogram(aes(x=re, y=..density..), binwidth=0.08) + xlab("Random Effects") + ylab(NULL)
 @
   \label{random}
   \caption{Histograms of estimated subject random effects, $\hat{\gamma}$}
 \end{figure}
+
+In Figure~\ref{random}, the level two residuals, $\hat{\gamma}$, generated appear to be normally distributed validating the assumptions of the modelling process.
+For each lineup, we rate the difficulty by the proportion of true plot detections to evaluations. Then, for each subject the difficulty of each lineup they evaluated is summed to give a measure of the expected number of detections. The visual ability of a subject is defined as the difference between the actual and expected number of detections, and is compared to the random effects in Figure~\ref{random2} to further validate the model.
+
+\begin{figure}[htbp]
+\centering
+\label{random2}
+<<random2, dependson='random', fig.height=6, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+turk.correct <- summarise(group_by(full.sub, pic_id), correct=sum(correct), attempts=sum(weights*attempts))
+turk.correct$percent <- turk.correct$correct/turk.correct$attempts
+ability <- merge(full.sub[,c("subj_id", "pic_id", "correct")], turk.correct[c("pic_id", "percent")], by="pic_id")
+ability <- summarise(group_by(ability, subj_id), actual=sum(correct), estimated=sum(percent))
+ability$diff <- ability$actual - ability$estimated
+ability.re <- merge(ability, randomeffects, by="subj_id")
+ggplot(data=ability.re, aes(x=diff, y=re)) + geom_point() + labs{x="Visual Ability", y="Random Effects"}
+@
+\caption{Visual ability plotted against random effects. The diagonal pattern suggests a strong positive relationship, indicating that the random effects in the model are a suitable measure of visual ability.}
+\end{figure}
+
+\iffalse
 This unrestricted model used in to test the symmetry restriction for the scatter plot design was written earlier as:
 
 $$Power_{UR,ijkt} = \psi\left\{ \beta_{0} + \beta_{1} x_{1,i}  + \beta_{2} x_{2,j}  + \beta_{3} x_{3,k} + \beta_{4} x_{4,t} + \beta_{5} x_{1,i} \* x_{2,j} + \gamma z_{s} + \epsilon_{ijkt} \right\}$$
@@ -709,6 +729,7 @@ $$Power_{R,ijkt} = \psi\left\{ \beta_{0} + \beta_{1} x_{1,i} + \beta_{3} x_{3,k}
 
 The unrestricted model has a log-likelihood value of -346.9, where the restricted model has a log-likelihood of -355.8. The test statistic is therefore, with a null distributed as a $\chi^{2}_{2}$ variable. The null hypothesis is rejected (p = 0.02). We find that the scatter plot has asymmetric performance over negative and positive values of correlation. This may be a result of unwittingly introducing bias into the methodology, the first scatter plot shown to subjects in the instruction set always had strong positive correlation. 
 A similar setup rejects the symmetric performance of the overlaid line graphs with a log likelihood ratio test statistic of 105.30 (p-value < 0.001). Such an extreme result is due to a systematic difference in the overlaid line graph and cannot be attributed simply to bias.
+\fi
 
 Table 2: Mixed Effects Linear Model with the dependent variable log(time). Sign = 1 if correlation > 0, 0 otherwise. Both plot designs estimated together with Overlaid Lines as the base design. Sample size: 1684. The model is fitted using the lme4 package in R.
 
