--- a/paper/references.bib
+++ b/paper/references.bib
@@ -175,7 +175,7 @@ ISSN={1077-2626},
 month={Dec}
 }
 
-@unpublished{Hoffman:2014,
+@unpublished{Hofmann:2014,
   author       = {Hofmann, H. and R{\:{o}}ttger, C. and Dixon, P. and Cook, D. and Buja, A.}, 
   title        = {Three scenarios of visual triangle tests},
   note         = {Working Paper},
